# openvr_fsr

./: .gitignore  LICENSE  README.md
.github/workflows/: openvr_fsr.yml
headers/: openvr_api.cs
src/: CMakeLists.txt  jsoncpp.cpp  openvr_api_public.cpp  openvr_mod.cfg
src/cas/: cas.compute.h  cas.sharpen.hlsl  cas.upscale.hlsl  ffx_cas.h
src/fsr/: fsr_cas.dxbc  fsr_cas.h  fsr_easu.hlsl  fsr_ps_cas.dxbc  fsr_ps_up.dxbc  fsr_rcas.hlsl  fsr_up.dxbc  fsr_up.h
src/json/: json-forwards.h  json.h
src/nis/: NIS_Config.h  NIS_Scaler.h  NIS_Sharpen.hlsl  NIS_Upscale.hlsl
src/postprocess/: Config.cpp  Config.h  PostProcessor.cpp  PostProcessor.h  VrHooks.cpp  VrHooks.h  WrappedIVRCompositor.cpp  WrappedIVRCompositor.h
src/vrcommon/: Config.h  WrappedIVRCompositor.cpp  strtools_public.cpp
